コンテンツ変換経過反映

--- a/kintone-help-astro-poc/src/pages/ja/app/appaction/copy_appaction.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/appaction/copy_appaction.mdx
@@ -33,10 +33,14 @@ import Note from "@/components/Note.astro";
       <td>レコードのURL</td>
       <td>
         <ul>
-          <li>リンク<br />
-          リンクの「入力値の種類」が「Webサイトのアドレス」の場合</li>
-          <li>ルックアップ<br />
-          ルックアップのコピー元が「リンク」フィールドで、その「リンク」フィールドの「入力値の種類」が「Webサイトのアドレス」に設定されている場合</li>
+          <li>
+            リンク<br />
+            リンクの「入力値の種類」が「Webサイトのアドレス」の場合
+          </li>
+          <li>
+            ルックアップ<br />
+            ルックアップのコピー元が「リンク」フィールドで、その「リンク」フィールドの「入力値の種類」が「Webサイトのアドレス」に設定されている場合
+          </li>
         </ul>
       </td>
     </tr>
@@ -46,36 +50,40 @@ import Note from "@/components/Note.astro";
     </tr>
     <tr>
       <td>
-      <ul><li>文字列（1行）</li>
-      <li>ルックアップ：コピー元が文字列（1行）フィールドの場合</li>
-      </ul>
+        <ul>
+          <li>文字列（1行）</li>
+          <li>ルックアップ：コピー元が文字列（1行）フィールドの場合</li>
+        </ul>
       </td>
       <td colspan="1" rowspan="1">
-      <ul>
-        <li>文字列（1行）</li>
-        <li>ルックアップ
-      <ul>
-        <li>ルックアップのコピー元が文字列（1行）フィールドの場合</li>
-        <li>ルックアップのコピー元がリンクフィールドの場合</li>
-      </ul>
-        </li>
-        <li>リンク</li>
-      </ul>
-    </td>
+        <ul>
+          <li>文字列（1行）</li>
+          <li>
+            ルックアップ
+            <ul>
+            <li>ルックアップのコピー元が文字列（1行）フィールドの場合</li>
+            <li>ルックアップのコピー元がリンクフィールドの場合</li>
+            </ul>
+          </li>
+          <li>リンク</li>
+        </ul>
+      </td>
     </tr>
     <tr>
       <td>
-      <ul>
-        <li>数値</li>
-        <li>ルックアップ：コピー元が数値フィールドの場合</li>
-      </ul>
+        <ul>
+          <li>数値</li>
+          <li>ルックアップ：コピー元が数値フィールドの場合</li>
+        </ul>
       </td>
       <td colspan="1" rowspan="1">
-      <ul>
-        <li>数値</li>
-        <li>ルックアップ<br />
-        ルックアップのコピー元が「数値」フィールドの場合</li>
-      </ul>
+        <ul>
+          <li>数値</li>
+          <li>
+            ルックアップ<br />
+            ルックアップのコピー元が「数値」フィールドの場合
+          </li>
+        </ul>
       </td>
     </tr>
     <tr>
@@ -83,39 +91,47 @@ import Note from "@/components/Note.astro";
       <td rowspan="1">
         <ul>
           <li>数値</li>
-          <li>ルックアップ<br />
-          ルックアップのコピー元が「数値」フィールドの場合</li>
+          <li>
+            ルックアップ<br />
+            ルックアップのコピー元が「数値」フィールドの場合
+          </li>
         </ul>
       </td>
     </tr>
     <tr>
       <td>レコード番号</td>
       <td>
-      <ul>
-        <li>数値</li>
-        <li>ルックアップ<br />
-        ルックアップのコピー元が「数値」フィールドの場合</li>
-      </ul>
-      </td>
-    </tr>
-    <tr>
-      <td>
-      <ul><li>リンク</li>
-      <li>コピー元が「リンク」フィールドのルックアップの値</li>
-      </ul>
-      </td>
-      <td>
-      <ul>
-        <li>文字列（1行）</li>
-        <li>ルックアップ
         <ul>
-          <li>ルックアップのコピー元が「文字列（1行）」フィールドの場合</li>
-          <li>ルックアップのコピー元が「リンク」フィールドで、その「リンク」フィールドの「入力値の種類」が、アクションのコピー元の「リンク」フィールドと同じ場合</li>
+          <li>数値</li>
+          <li>
+            ルックアップ<br />
+            ルックアップのコピー元が「数値」フィールドの場合
+          </li>
         </ul>
-        </li>
-        <li>リンク<br />
-        リンクの「入力値の種類」が、アクションのコピー元の「リンク」フィールドと同じ場合</li>
-      </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <ul>
+          <li>リンク</li>
+          <li>コピー元が「リンク」フィールドのルックアップの値</li>
+        </ul>
+      </td>
+      <td>
+        <ul>
+          <li>文字列（1行）</li>
+          <li>
+            ルックアップ
+            <ul>
+            <li>ルックアップのコピー元が「文字列（1行）」フィールドの場合</li>
+            <li>ルックアップのコピー元が「リンク」フィールドで、その「リンク」フィールドの「入力値の種類」が、アクションのコピー元の「リンク」フィールドと同じ場合</li>
+            </ul>
+          </li>
+          <li>
+            リンク<br />
+            リンクの「入力値の種類」が、アクションのコピー元の「リンク」フィールドと同じ場合
+          </li>
+        </ul>
       </td>
     </tr>
     <tr>
@@ -128,10 +144,11 @@ import Note from "@/components/Note.astro";
     </tr>
     <tr>
       <td>
-      <ul><li>ユーザー選択</li>
-      <li>作成者</li>
-      <li>更新者</li>
-      </ul>
+        <ul>
+          <li>ユーザー選択</li>
+          <li>作成者</li>
+          <li>更新者</li>
+        </ul>
       </td>
       <td colspan="1" rowspan="1">ユーザー選択</td>
     </tr>
