--- a/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/basic_error/autocalc_format.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/basic_error/autocalc_format.mdx
@@ -29,8 +29,10 @@ import Heading from "@/components/Heading.astro";
     </tr>
     <tr>
       <td style="text-align: center;">-</td>
-      <td>数値の引き算を行います。<br />
-      単項演算子として、フィールドの値の正負を変換する目的にも使用できます。</td>
+      <td>
+        数値の引き算を行います。<br />
+        単項演算子として、フィールドの値の正負を変換する目的にも使用できます。
+      </td>
     </tr>
     <tr>
       <td style="text-align: center;">*</td>
@@ -42,14 +44,18 @@ import Heading from "@/components/Heading.astro";
     </tr>
     <tr>
       <td style="text-align: center;">^</td>
-      <td>数値のべき算を行います。-100乗から100乗まで計算できます。<br />
-      べき指数に小数を指定すると、整数に切り下げて計算されます。<br />
-      例：3^2.5は3^2に変換され、計算結果は9になります。</td>
+      <td>
+        数値のべき算を行います。-100乗から100乗まで計算できます。<br />
+        べき指数に小数を指定すると、整数に切り下げて計算されます。<br />
+        例：3^2.5は3^2に変換され、計算結果は9になります。
+      </td>
     </tr>
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040511.html">&amp;</a></td>
-      <td>文字列または数値を結合します。<br />
-      数値型または文字列型のフィールドが参照されていて未入力の場合は、空文字列とみなして結合します。</td>
+      <td>
+        文字列または数値を結合します。<br />
+        数値型または文字列型のフィールドが参照されていて未入力の場合は、空文字列とみなして結合します。
+      </td>
     </tr>
     <tr>
       <td style="text-align: center;">=</td>
@@ -57,19 +63,20 @@ import Heading from "@/components/Heading.astro";
     </tr>
     <tr>
       <td style="text-align: center;">!=</td>
-      <td>「=」の比較結果を反転させたものになります。型が異なる比較は真になります。<br />
+      <td>
+        「=」の比較結果を反転させたものになります。型が異なる比較は真になります。<br />
       </td>
     </tr>
     <tr>
-      <td style="text-align: center;"><></td>
+      <td style="text-align: center;">&lt;&gt;</td>
       <td>!=と同様の結果になります。<br /></td>
     </tr>
     <tr>
-      <td style="text-align: center;"><</td>
+      <td style="text-align: center;">&lt;</td>
       <td>左の値が右の値より小さければ真、右の値以上であれば偽を返します。</td>
     </tr>
     <tr>
-      <td style="text-align: center;"><=</td>
+      <td style="text-align: center;">&lt;=</td>
       <td>左の値が右の値以下であれば真、右の値より大きければ偽を返します。</td>
     </tr>
     <tr>
@@ -91,7 +98,7 @@ import Heading from "@/components/Heading.astro";
 * \* , /（掛け算と割り算）
 * \+ , -（足し算と引き算）
 * &（文字列演算子）
-* =,  !=,  <>,  <,  >,  <=,  >=（比較演算子）
+* =,  !=,  &lt;&gt;,  &lt;,  &gt;,  &lt;=,  &gt;=（比較演算子）
 
 <Heading id="autocalc_autocalc_format_20">関数の説明</Heading>
 関数は大文字と小文字のどちらでも入力できます。  
@@ -108,13 +115,13 @@ import Heading from "@/components/Heading.astro";
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040807.html" target="_blank">SUM</a></td>
       <td>
-      <p>数値のフィールドコード、値が数値になる計算式、または数値を合計します。</p>
+        <p>数値のフィールドコード、値が数値になる計算式、または数値を合計します。</p>
       </td>
     </tr>
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040808.html" target="_blank">YEN</a></td>
       <td>
-      <p>計算結果を、指定した桁数で四捨五入し、3桁ごとの桁区切りの「&yen;（円）」形式で表示します。</p>
+        <p>計算結果を、指定した桁数で四捨五入し、3桁ごとの桁区切りの「&yen;（円）」形式で表示します。</p>
       </td>
     </tr>
     <tr>
@@ -127,13 +134,17 @@ import Heading from "@/components/Heading.astro";
     </tr>
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040496.html" target="_blank">AND</a></td>
-      <td>計算式で指定した条件が全て真となる時は真を返し、そうでなければ偽を返します。<br />
-      32個までの引数を指定できます。</td>
+      <td>
+        計算式で指定した条件が全て真となる時は真を返し、そうでなければ偽を返します。<br />
+        32個までの引数を指定できます。
+      </td>
     </tr>
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040496.html" target="_blank">OR</a></td>
-      <td>計算式で指定した条件のいずれかが真となる時は真を返し、そうでなければ偽を返します。<br />
-      32個までの引数を指定できます。</td>
+      <td>
+        計算式で指定した条件のいずれかが真となる時は真を返し、そうでなければ偽を返します。<br />
+        32個までの引数を指定できます。
+      </td>
     </tr>
     <tr>
       <td style="text-align: center;"><a href="/k/ja/id/040496.html" target="_blank">NOT</a></td>
