--- a/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/function/if_function.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/function/if_function.mdx
@@ -28,14 +28,14 @@ IF関数は、複数の関数や計算式を階層構造（入れ子）で記載
 
 * =
 * !=
-* <>
-* <
-* <=
+* &lt;&gt;
+* &lt;
+* &lt;=
 * \>
 * \>=
 
 数値型のフィールド（数値フィールドなど）を比較する場合は、上記の演算子がすべて利用できます。  
-文字列型のフィールド（文字列（1行）フィールドなど）を比較する場合は、「＝」「!=」「<>」のみが利用できます。文字列型では、「等しいかどうか」の比較だけが可能です。
+文字列型のフィールド（文字列（1行）フィールドなど）を比較する場合は、「＝」「!=」「&lt;&gt;」のみが利用できます。文字列型では、「等しいかどうか」の比較だけが可能です。
 
 フィールドのデータ型については、「[フィールドのデータ型](/k/ja/id/040500.html#autocalc_calculation_type_10)」を参照してください。
 
