--- a/kintone-help-astro-poc/src/pages/ja/app/form/form_parts/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/form_parts/index.mdx
@@ -29,60 +29,60 @@ import Note from "@/components/Note.astro";
         <tr>
             <td>テキスト</td>
             <td>
-            <ul>
-            <li><a href="/k/ja/id/040539.html">文字列（1行）</a></li>
-            <li><a href="/k/ja/id/040538.html">文字列（複数行）</a></li>
-            <li><a href="/k/ja/id/040537.html">リッチエディター</a></li>
-            <li><a href="/k/ja/id/040534.html">数値</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040539.html">文字列（1行）</a></li>
+                <li><a href="/k/ja/id/040538.html">文字列（複数行）</a></li>
+                <li><a href="/k/ja/id/040537.html">リッチエディター</a></li>
+                <li><a href="/k/ja/id/040534.html">数値</a></li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>計算</td>
             <td>
-            <ul>
-            <li><a href="/k/ja/id/040517.html">計算</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040517.html">計算</a></li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>選択肢</td>
             <td>
-            <ul>
-              <li><a href="/k/ja/id/040535.html">ラジオボタン</a></li>
-              <li><a href="/k/ja/id/040518.html">チェックボックス</a></li>
-              <li><a href="/k/ja/id/040533.html">複数選択</a></li>
-              <li><a href="/k/ja/id/040524.html">ドロップダウン</a></li> 
-              <li><a href="/k/ja/id/040543.html">ユーザー選択</a></li> 
-              <li><a href="/k/ja/id/040523.html">組織選択</a></li>
-              <li><a href="/k/ja/id/040530.html">グループ選択</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040535.html">ラジオボタン</a></li>
+                <li><a href="/k/ja/id/040518.html">チェックボックス</a></li>
+                <li><a href="/k/ja/id/040533.html">複数選択</a></li>
+                <li><a href="/k/ja/id/040524.html">ドロップダウン</a></li>
+                <li><a href="/k/ja/id/040543.html">ユーザー選択</a></li>
+                <li><a href="/k/ja/id/040523.html">組織選択</a></li>
+                <li><a href="/k/ja/id/040530.html">グループ選択</a></li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>日時</td>
             <td>
-            <ul>
-              <li><a href="/k/ja/id/040521.html">日付</a></li>
-              <li><a href="/k/ja/id/040540.html">時刻</a></li>
-              <li><a href="/k/ja/id/040522.html">日時</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040521.html">日付</a></li>
+                <li><a href="/k/ja/id/040540.html">時刻</a></li>
+                <li><a href="/k/ja/id/040522.html">日時</a></li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>URL、電話番号、メールアドレス</td>
             <td>
-            <ul>
-              <li><a href="/k/ja/id/040532.html">リンク</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040532.html">リンク</a></li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>ファイル</td>
             <td>
-            <ul>
-              <li><a href="/k/ja/id/040514.html">添付ファイル</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040514.html">添付ファイル</a></li>
+              </ul>
             </td>
         </tr>
     </tbody>
@@ -100,9 +100,10 @@ import Note from "@/components/Note.astro";
             <tr>
             <td>テーブル（表）</td>
             <td>
-            <ul>
-            <li><a href="/k/ja/id/040529.html">テーブル</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040529.html">テーブル</a></li>
+              </ul>
+            </td>
         </tr>
     </tbody>
 </table>
@@ -119,10 +120,11 @@ import Note from "@/components/Note.astro";
             <tr>
             <td>アプリ間の連携</td>
             <td>
-            <ul>
-            <li><a href="/k/ja/id/040526.html">ルックアップ</a></li>
-            <li><a href="/k/ja/id/040527.html">関連レコード一覧</a></li>
-            </ul>
+              <ul>
+                <li><a href="/k/ja/id/040526.html">ルックアップ</a></li>
+                <li><a href="/k/ja/id/040527.html">関連レコード一覧</a></li>
+              </ul>
+            </td>
         </tr>
     </tbody>
 </table>
@@ -139,12 +141,13 @@ import Note from "@/components/Note.astro";
          <tr>
             <td>フォームの装飾</td>
             <td>
-            <ul> <li><a href="/k/ja/id/040531.html">ラベル</a></li>
+              <ul>
+                <li><a href="/k/ja/id/040531.html">ラベル</a></li>
                 <li><a href="/k/ja/id/040515.html">スペース</a></li>
                 <li><a href="/k/ja/id/040516.html">罫線</a></li>
                 <li><a href="/k/ja/id/040525.html">グループ</a></li>
-            </ul>
-         </td>
+              </ul>
+            </td>
         </tr>
     </tbody>
 </table>
@@ -161,12 +164,13 @@ import Note from "@/components/Note.astro";
          <tr>
             <td>レコード情報</td>
             <td>
-            <ul><li><a href="/k/ja/id/040536.html">レコード番号</a></li>
+              <ul>
+                <li><a href="/k/ja/id/040536.html">レコード番号</a></li>
                 <li><a href="/k/ja/id/040519.html">作成者</a></li>
                 <li><a href="/k/ja/id/040520.html">作成日時</a></li>
                 <li><a href="/k/ja/id/040541.html">更新者</a></li>
                 <li><a href="/k/ja/id/040542.html">更新日時</a></li>
-            </ul>
+              </ul>
             </td>
         </tr>
     </tbody>
