--- a/kintone-help-astro-poc/src/pages/ja/app/form/lookup/otherfield_copy.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/lookup/otherfield_copy.mdx
@@ -22,48 +22,56 @@ import Note from "@/components/Note.astro";
         <tr>
             <td>文字列（1行）</td>
             <td>
-            <ul>
+              <ul>
                 <li>文字列（1行）</li>
-                <li>ルックアップ<br />
-                ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ</li>
+                <li>
+                  ルックアップ<br />
+                  ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ
+                </li>
                 <li>ラジオボタン</li>
                 <li>ドロップダウン</li>
-            </ul>
+              </ul>
             </td>
         </tr>
         <tr>
             <td style="width: 151.283px;">数値</td>
             <td style="width: 524.717px;">
-            <ul>
+              <ul>
                 <li>数値</li>
                 <li>計算</li>
-                <li>ルックアップ<br />
-                ※「コピー元のフィールド」に数値フィールドまたはレコード番号フィールドを指定している場合のみ</li>
+                <li>
+                  ルックアップ<br />
+                  ※「コピー元のフィールド」に数値フィールドまたはレコード番号フィールドを指定している場合のみ
+                </li>
                 <li>レコード番号</li>
-            </ul>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>文字列（複数行）</td>
             <td>
-            <ul>
+              <ul>
                 <li>文字列（1行）</li>
                 <li>文字列（複数行）</li>
-                <li>ルックアップ<br />
-                ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ</li>
-            </ul>
+                <li>
+                  ルックアップ<br />
+                  ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ
+                </li>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>リッチエディター</td>
             <td>
-            <ul>
+              <ul>
                 <li>文字列（1行）</li>
                 <li>文字列（複数行）</li>
                 <li>リッチエディター</li>
-                <li>ルックアップ<br />
-                ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ</li>
-            </ul>
+                <li>
+                  ルックアップ<br />
+                  ※「コピー元のフィールド」に文字列（1行）フィールドを指定している場合のみ
+                </li>
+              </ul>
             </td>
         </tr>
         <tr>
@@ -84,8 +92,10 @@ import Note from "@/components/Note.astro";
         </tr>
         <tr>
             <td>リンク</td>
-            <td>リンク<br />
-            ※入力値の種類が同じの場合のみ</td>
+            <td>
+              リンク<br />
+              ※入力値の種類が同じの場合のみ
+            </td>
         </tr>
         <tr>
             <td>日付</td>
@@ -98,21 +108,21 @@ import Note from "@/components/Note.astro";
         <tr>
             <td>日時</td>
             <td>
-            <ul>
+              <ul>
                 <li>日時</li>
                 <li>作成日時</li>
                 <li>更新日時</li>
-            </ul>
+              </ul>
             </td>
         </tr>
         <tr>
             <td>ユーザー選択</td>
             <td>
-            <ul>
+              <ul>
                 <li>ユーザー選択</li>
                 <li>作成者</li>
                 <li>更新者</li>
-            </ul>
+              </ul>
             </td>
         </tr>
         <tr>
