--- a/kintone-help-astro-poc/src/pages/ja/app/manage/changespace_app_belongsto.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/manage/changespace_app_belongsto.mdx
@@ -81,18 +81,18 @@ import Wovn from "@/components/Wovn.astro";
 1. <Wovn>［アプリの所属するスペースを変更］</Wovn>ダイアログで、変更先のスペース名を検索して選択します。  
   スペースへの所属を解除したい場合は、<Wovn>［スペースへの所属を解除］</Wovn>のラジオボタンをクリックします。
 
-   <Note>
+  <Note>
 
-   * 検索結果に表示されるスペースは10件までです。
-   * 所属の変更先として指定できないスペースは、検索結果に表示されません。  
-    参考：[所属の変更先として指定できないスペース](#app_settings_changespace_app_belongsto_20)
+  * 検索結果に表示されるスペースは10件までです。
+  * 所属の変更先として指定できないスペースは、検索結果に表示されません。  
+  参考：[所属の変更先として指定できないスペース](#app_settings_changespace_app_belongsto_20)
 
-   * 以下のいずれかに該当する場合、<Wovn>［スペースへの所属を解除］</Wovn>のラジオボタンは選択できません。
-     * スペースに所属していないアプリの場合
-     * システム管理者によって、<Wovn>［利用する機能の選択］</Wovn>の<Wovn>［スペースに所属しないアプリの作成を許可する］</Wovn>が無効に設定されている場合  
-      参考：[利用する機能の選択](/k/ja/id/04031.html)
+  * 以下のいずれかに該当する場合、<Wovn>［スペースへの所属を解除］</Wovn>のラジオボタンは選択できません。
+    * スペースに所属していないアプリの場合
+    * システム管理者によって、<Wovn>［利用する機能の選択］</Wovn>の<Wovn>［スペースに所属しないアプリの作成を許可する］</Wovn>が無効に設定されている場合  
+    参考：[利用する機能の選択](/k/ja/id/04031.html)
 
-  </Note>
+</Note>
 
 1. <Wovn>［変更］</Wovn>をクリックします。
 
@@ -124,27 +124,35 @@ import Wovn from "@/components/Wovn.astro";
 <tbody>
  <tr>
    <td>ユーザーに「アプリの作成」権限がない</td>
-   <td>システム管理者が、ユーザーに「アプリの作成」権限を付与する必要があります。<br>
-   設定は、<Kintone />システム管理の<Wovn>［アクセス権］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br>
-   <a href="/k/ja/id/040867.html"><Kintone />全体に関わるアクセス権を設定する</a></td>
+   <td>
+     システム管理者が、ユーザーに「アプリの作成」権限を付与する必要があります。<br />
+     設定は、<Kintone />システム管理の<Wovn>［アクセス権］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br />
+     <a href="/k/ja/id/040867.html"><Kintone />全体に関わるアクセス権を設定する</a>
+   </td>
  </tr>
  <tr>
    <td>ユーザーにPublicアプリグループの「アプリの作成」権限および「アプリの管理／使用／削除」権限がない</td>
-   <td>システム管理者が、ユーザーにPublicアプリグループの「アプリの作成」権限および「アプリの管理／使用／削除」権限を付与する必要があります。<br>
-   設定は、<Kintone />システム管理の<Wovn>［アプリグループ］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br>
-   <a href="/k/ja/id/04025.html">アプリグループにアクセス権を設定する</a></td>
+   <td>
+     システム管理者が、ユーザーにPublicアプリグループの「アプリの作成」権限および「アプリの管理／使用／削除」権限を付与する必要があります。<br />
+     設定は、<Kintone />システム管理の<Wovn>［アプリグループ］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br />
+     <a href="/k/ja/id/04025.html">アプリグループにアクセス権を設定する</a>
+   </td>
  </tr>
  <tr>
    <td>（スペース内アプリの所属スペースを変更する場合）現在所属しているスペースの管理者でない</td>
-   <td>スペースの管理者が、ユーザーをスペースの管理者に追加する必要があります。<br>
-   設定は、スペースの<Wovn>［メンバーを管理］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br>
-   <a href="/k/ja/id/040703.html">スペースのメンバーを追加／削除する</a></td>
+   <td>
+     スペースの管理者が、ユーザーをスペースの管理者に追加する必要があります。<br />
+     設定は、スペースの<Wovn>［メンバーを管理］</Wovn>画面で行います。手順の詳細は、次のページを参照してください。<br />
+     <a href="/k/ja/id/040703.html">スペースのメンバーを追加／削除する</a>
+   </td>
  </tr>
  <tr>
    <td>Publicアプリグループ以外のアプリグループに所属するアプリを開いている<Wovn></Wovn></td>
-   <td>アプリの管理者が、アプリグループをPublicアプリグループに変更する必要があります。<br>
-   設定は、<Wovn>［アプリの設定］</Wovn>画面の<Wovn>［アクセス権］</Wovn>から行います。手順の詳細は、次のページを参照してください。<br>
-  <a href="/k/ja/id/040592.html">所属するアプリグループを変更する</a></td>
+   <td>
+     アプリの管理者が、アプリグループをPublicアプリグループに変更する必要があります。<br />
+     設定は、<Wovn>［アプリの設定］</Wovn>画面の<Wovn>［アクセス権］</Wovn>から行います。手順の詳細は、次のページを参照してください。<br />
+     <a href="/k/ja/id/040592.html">所属するアプリグループを変更する</a>
+   </td>
  </tr>
  <tr>
    <td>ゲストスペースに所属するアプリを開いている<Wovn></Wovn></td>
