--- a/kintone-help-astro-poc/src/pages/ja/app/setup/app_csv/suggestedtype.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/app_csv/suggestedtype.mdx
@@ -49,23 +49,25 @@ import Wovn from "@/components/Wovn.astro";
             <td><Wovn>［リンク］</Wovn>（メールアドレス）</td>
         </tr>
         <tr>
-            <td>次のすべての条件にあてはまる場合<br />
-            <ul>
+            <td>
+              次のすべての条件にあてはまる場合<br />
+              <ul>
                 <li>空のセルがない</li>
                 <li>すべての値が1行</li>
                 <li>すべての値が20文字以内</li>
                 <li>値が3種類以下</li>
-            </ul>
+              </ul>
             </td>
             <td><Wovn>［ラジオボタン］</Wovn></td>
         </tr>
         <tr>
-            <td>次のすべての条件にあてはまる場合<br />
-            <ul>
+            <td>
+              次のすべての条件にあてはまる場合<br />
+              <ul>
                 <li>すべての値が1行</li>
                 <li>すべての値が20文字以内</li>
                 <li>値が20種類以下</li>
-            </ul>
+              </ul>
             </td>
             <td><Wovn>［ドロップダウン］</Wovn></td>
         </tr>
