--- a/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/function/and_or.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/form/autocalc/function/and_or.mdx
@@ -47,14 +47,14 @@ NOT(条件式1)
 
 * =
 * !=
-* <>
-* <
-* <=
+* &lt;&gt;
+* &lt;
+* &lt;=
 * \>
 * \>=
 
 数値型のフィールド（数値フィールドなど）を比較する場合は、上記の演算子がすべて利用できます。  
-文字列型のフィールド（文字列（1行）フィールドなど）を比較する場合は、「＝」「!=」「<>」のみが利用できます。
+文字列型のフィールド（文字列（1行）フィールドなど）を比較する場合は、「＝」「!=」「&lt;&gt;」のみが利用できます。
 
 フィールドのデータ型については、「[フィールドのデータ型](/k/ja/id/040500.html#autocalc_calculation_type_10)」を参照してください。
 
@@ -72,7 +72,7 @@ NOT(条件式1)
 次の例は、「学科」フィールドと「実技」フィールドの点数が両方とも80点以上であれば「合格」を表示し、そうでなければ「再テスト」を表示する計算式です。
 
 ```plaintext {copy=true}
-IF(AND(学科>=80,実技>=80),"合格","再テスト")
+IF(AND(学科&gt;=80,実技&gt;=80),"合格","再テスト")
 
 ```
 
@@ -84,7 +84,7 @@ IF(AND(学科>=80,実技>=80),"合格","再テスト")
 次の例は、「学科」フィールドと「実技」フィールドの点数のどちらかが80点以上であれば「合格」を表示し、そうでなければ「再テスト」を表示する計算式です。
 
 ```plaintext {copy=true}
-IF(OR(学科>=80,実技>=80),"合格","再テスト")
+IF(OR(学科&gt;=80,実技&gt;=80),"合格","再テスト")
 
 ```
 
@@ -96,7 +96,7 @@ IF(OR(学科>=80,実技>=80),"合格","再テスト")
 次の例は、「学科」フィールドと「実技」フィールドの点数の合計が160点以上でなければ「再テスト」を表示し、そうでなければ「合格」を表示する計算式です。
 
 ```plaintext {copy=true}
-IF(NOT(学科+実技>=160),"再テスト","合格")
+IF(NOT(学科+実技&gt;=160),"再テスト","合格")
 
 ```
 
