--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/download_apptemplate.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/download_apptemplate.mdx
@@ -106,19 +106,23 @@ import Reference from "@/components/Reference.astro";
     <tbody>
         <tr>
             <td>アプリをテンプレート化できません。ルックアップ、関連レコード一覧、またはアクションの設定で参照しているアプリに、アクセス権がありません。</td>
-            <td>テンプレートに含まれるアプリ（ルックアップ、関連レコード一覧、またはアプリアクションで参照しているアプリ）の中に、管理権限を持たないアプリが含まれています。<br>ルックアップ、関連レコード一覧、またはアプリアクションで参照しているアプリのアクセス権を確認し、ダウンロード操作をするユーザーに対してアプリの管理権限を付与してください。<br>
-            <a href="/k/ja/id/040589.html">アプリにアクセス権を設定する</a></td>
+            <td>
+              テンプレートに含まれるアプリ（ルックアップ、関連レコード一覧、またはアプリアクションで参照しているアプリ）の中に、管理権限を持たないアプリが含まれています。<br />ルックアップ、関連レコード一覧、またはアプリアクションで参照しているアプリのアクセス権を確認し、ダウンロード操作をするユーザーに対してアプリの管理権限を付与してください。<br />
+              <a href="/k/ja/id/040589.html">アプリにアクセス権を設定する</a>
+            </td>
         </tr>
         <tr>
             <td>操作に失敗しました。テンプレートに含まれるアプリが上限100個を超えています。</td>
-            <td>テンプレートに含まれるアプリの数が上限（100個）を超えています。<br>ルックアップ、関連レコード一覧、またはアプリアクションの設定を確認して不要な参照関係を解除し、テンプレートに含まれるアプリを100個以下にしてください。<br>
-            <a href="/k/ja/id/040547.html">ルックアップを設定する</a><br>
-            <a href="/k/ja/id/040552.html">関連レコード一覧を設定する</a><br>
-            <a href="/k/ja/id/040487.html">アプリアクションを設定する</a></td>
+            <td>
+              テンプレートに含まれるアプリの数が上限（100個）を超えています。<br />ルックアップ、関連レコード一覧、またはアプリアクションの設定を確認して不要な参照関係を解除し、テンプレートに含まれるアプリを100個以下にしてください。<br />
+              <a href="/k/ja/id/040547.html">ルックアップを設定する</a><br />
+              <a href="/k/ja/id/040552.html">関連レコード一覧を設定する</a><br />
+              <a href="/k/ja/id/040487.html">アプリアクションを設定する</a>
+            </td>
         </tr>
         <tr>
             <td>アプリの設定が変更されたため、テンプレートファイルをダウンロードできません。「アプリをテンプレートとしてダウンロード」ダイアログを一度閉じてから、ダウンロードをやり直してください。</td>
-            <td>「アプリをテンプレートとしてダウンロード」ダイアログが開いている状態で、アプリの設定（ルックアップ、関連レコード一覧、またはアプリアクションのいずれかの設定）が更新され、テンプレートに含まれるアプリが変更されました。<br>「アプリをテンプレートとしてダウンロード」ダイアログを一度閉じてから、ダウンロード操作をやり直してください。</td>
+            <td>「アプリをテンプレートとしてダウンロード」ダイアログが開いている状態で、アプリの設定（ルックアップ、関連レコード一覧、またはアプリアクションのいずれかの設定）が更新され、テンプレートに含まれるアプリが変更されました。<br />「アプリをテンプレートとしてダウンロード」ダイアログを一度閉じてから、ダウンロード操作をやり直してください。</td>
         </tr>
     </tbody>
 </table>
